HTML document size not scaling correctly on mobile fixed, and table size now adjusts accordingly

--- a/css/main.css
+++ b/css/main.css
@@ -1,35 +1,53 @@
-html,body {
-  height: 100%;
+* {
+  margin: 0;
+  padding: 0;
+ }
+
+html
+{
   overflow: auto;
+  width: 100vw;
+  align-items: center;
+  justify-content: center;
+  min-width: 370px;
 }
 
 body {
+  margin-left:auto;
+  margin-right:auto;
   display: flex;
-	align-items: flex-start;
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
+  align-items: flex-start;
+  justify-content: center;
+  /*padding-left:75px;
+  padding-right:75px;*/
   padding-top: 90px;
   padding-bottom: 40px;
-  justify-content: center;
   background-color: #f5f5f5;
 }
 
 .main-search {
   display:flex;
-  align-items: flex-start;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   justify-content: center;
-  margin-left: 20%;
   max-width: 920px;
   min-width: 325px;
   padding-top: 20px;
 }
 
 .main-logout {
+  position: relative;
   display:flex;
   align-items: flex-start;
   justify-content: flex-end;
   min-width: 325px;
-  margin-left: 100%;
+  margin-left: 80%;
   padding-left: 150px;
-  padding-right: 25px;
+  margin-right: 25px;
 }
 
 #searchInput{
@@ -38,6 +56,9 @@ body {
 
 .nav-bar{
   position: sticky;
+  display:flex;
+  align-items: center;
+  justify-content: center;
   top: 10px;
   background-color: #f5f5f5;
   border-radius: 10px;
@@ -45,29 +66,41 @@ body {
   border-right:solid rgb(151, 146, 146) 1px;
   border-bottom:solid rgb(151, 146, 146) 1px;
   border-top:solid rgb(151, 146, 146) 1px;
-  display:flex;
   max-width: 920px;
-  min-width: 325px;
+  min-width: 390px;
+  max-height: 60px;
+  min-height: 60px;
   padding: 10px;
+  
   z-index: 2
 }
 
 .nav-bar-logout{
   position: sticky;
+  display:flex;
+  align-items: center;
+  justify-content: center;
   top: 10px;
-  margin-top: 20px;
-  margin-right: 50px;
-  padding: 10px;
   background-color: #f5f5f5;
   border-radius: 10px;
   border-left:solid rgb(151, 146, 146) 1px;
   border-right:solid rgb(151, 146, 146) 1px;
   border-bottom:solid rgb(151, 146, 146) 1px;
   border-top:solid rgb(151, 146, 146) 1px;
-  float:left;
-  display:flex;
+  max-width: 100px;
   min-width: 100px;
+  max-height: 60px;
+  min-height: 60px;
+  margin-left: 5%;
+  padding: 10px;
   z-index: 2
+}
+
+td { 
+  overflow: hidden; 
+  text-overflow: "-";
+  word-wrap: break-word;
+  white-space: normal;
 }
 
 #addNewContactButton{
@@ -76,12 +109,12 @@ body {
   width: 42%;
   min-width: 150px;
   margin-right: 3%;
+  margin-left: 15px;
   white-space: nowrap;
 }
 
 #addCondensedNewContactButton{
   float:none; 
-  display:none;
   width: 42%;
   max-width: 40px;
   margin-right: 3%;
@@ -89,32 +122,48 @@ body {
 }
 
 #resultTable{
+  display:inline-table;
+  table-layout: fixed;
+  align-items: center;
+  text-align: start;
+  margin-left:0;
+  margin-right:0;
+  width:80%;
+  justify-content: center;
   font-size: 100%;
-  max-width: 80%;
+  max-width: 100%;
+  min-width: 85%;
   white-space: nowrap;
 }
 
+
 #manageButton{
+  display: inline-table;
   font-size: 100%;
+  align-items: start;
+  
   white-space: nowrap;
 }
 
 @media screen and (max-width: 760px) 
 {
-  
-  .main-logout{
-    margin-left: calc(20% + 435px);
-  }
   .main-search
   {
-    margin-left: calc(20% + 35px);
+    /*margin-left: calc(20% + 35px);*/
+    padding-right: 28%;
     max-width: 245px;
     min-width: 245px;
   }
   .nav-bar
   {
+    margin-left: 122.5%;
     max-width: 245px;
     min-width: 245px;
+    padding-right: 5px;
+  }
+  .nav-bar-logout
+  {
+    margin-right: 60px;
   }
   .th-lg{
     white-space: pre;
@@ -130,6 +179,9 @@ body {
     display:inline;
   }
   #resultTable{
+    /*margin-right: 25px;*/
+    min-width: 95%;
+    width: 95%;
     font-size: 85%;
     white-space: normal;
     overflow-wrap: break-word; 
@@ -137,11 +189,23 @@ body {
   #manageButton{
     font-size: 100%;
   }
+  #phoneLabel{
+    visibility: hidden;
+    position: relative;
+  }
+  #phoneLabel:after{
+    visibility: visible;
+    position: absolute;
+    left: 0;
+    content: 'Phone #';
+    
+  }
 }
 
 #searchInput{
   float:left; 
   display:inline;
+  padding-right: 10px;
   width: 68%;
 }
 
@@ -154,12 +218,13 @@ body {
   white-space: normal;
 }
 
-th, td {
+/*th, td {
+  
   padding-top: 25px;
   padding-bottom: 20px;
-  padding-left: 30px;
-  padding-right: 40px;
-}
+  padding-left: 20px;
+  padding-right: 20px;
+}*/
 
 table {
   border-spacing: 30px;
@@ -193,13 +258,14 @@ table {
   border-top-right-radius: 0;
 }
 
-/* Couldn't find another way to left justify, will need to test on other sized screens*/
 .btn-danger {
   display: flex;
   align-items: center;
   position: absolute;
+  /*
   margin-left:25px;
   margin-right:75%;
+  */
   width: 72px;
 }
 
@@ -207,10 +273,11 @@ table {
   height: 200px;
   width: 100%;
   background-color: #f5f5f5;
-  }
-  .position-relative div {
+}
+
+.position-relative div {
   width: 2em;
   height: 2em;
   background-color: #343a40;
   border-radius: .25rem;
-  }
+}
